--- a/git-2.html
+++ b/git-2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-boven">RIOT</div>
+        <img src="assets/riot-games-logo.svg">
         <div class="nav-boven">Who we are </div>
         <div class="nav-boven">Sign in</div>
 
