--- a/git-2.html
+++ b/git-2.html
@@ -9,7 +9,13 @@
 <body>
     <nav>
         <img src="assets/riot-games-logo.svg">
-        <div class="nav-boven">Who we are </div>
+        <div class="nav-boven">
+            <ul>
+                <li><a href="">Who we are</a></li>
+                <li><a href="">Work with us</a></li>
+                <li><a href="">News</a></li>
+            </ul>
+        </div>
         <div class="nav-boven">Sign in</div>
 
     </nav>
