--- a/git-2.html
+++ b/git-2.html
@@ -16,7 +16,7 @@
                 <li><a href="">News</a></li>
             </ul>
         </div>
-        <div class="nav-boven">Sign in</div>
+        <div class="nav-boven"><span class="kaka"><b><a href="">Sign in</a></b></span></div>
 
     </nav>
     
