--- a/git-2.html
+++ b/git-2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Git-2.css">
 </head>
 <body>
+    <header>
     <nav>
         <img src="assets/riot-games-logo.svg">
         <div class="nav-boven">
@@ -16,9 +17,15 @@
                 <li><a href="">News</a></li>
             </ul>
         </div>
-        <div class="nav-boven"><span class="kaka"><b><a href="">Sign in</a></b></span></div>
+        <div class="nav-boven"><span class="inlog"><b><a href="">Sign in</a></b></span></div>
 
     </nav>
-    
+    <video class="hero_new__video" autoplay="" playsinline=""
+           poster="https://www.riotgames.com/darkroom/1920/f277926f65f932fad572f88b04d57c4b:79ca86b2c1d8302b93bf04aad5f03c71/w24-riot-homepage-back-up.jpg"
+           muted="" loop="" preload="auto">
+        <source src="https://www.riotgames.com/darkroom/original/d2224a81b271091b06d91da597aefe0d:c18d41cc833ebc0f52c48f0f927049ac/trophystraight-effect-full.mp4"
+                type="video/mp4">
+    </video>
+    </header> 
 </body>
 </html>
